<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parking_input_vehicle">Input Your Vehicle</string>
    <string name="parking_license_plate">License Plate</string>
    <string name="parking_edit">Edit</string>
    <string name="parking_delete">Delete</string>
    <string name="parking_empty">Empty</string>
    <string name="parking_save">Save</string>
    <string name="parking_add_plate_title">Add vehicle license plate number (e.g. XYZ1234)</string>
    <string name="parking_delete_plate_confirm">Are you sure to delete the license plate</string>
    <string name="parking_ok">Ok</string>
    <string name="parking_cancel">Cancel</string>
    <string name="parking_street_parking_selections">Street Parking Selections</string>
    <string name="parking_vehicle_image">Vehicle Image</string>
    <string name="parking_confirm_payment">Confirmation Payment</string>
    <string name="parking_transaction_details">Transaction Details</string>
    <string name="parking_license_plate_number">License Plate Number</string>
    <string name="parking_paid_to">Paid To</string>
    <string name="parking_in_time">In Time</string>
    <string name="parking_date_and_time">Date &amp; Time</string>
    <string name="parking_out_location">Out Location</string>
    <string name="parking_transaction_id">Transaction ID</string>
    <string name="parking_confirm">Confirm</string>
    <string name="parking_yes">Yes</string>
    <string name="parking_no">No</string>
    <string name="parking_exit_prompt">Exit duration after payment is</string>
    <string name="parking_exit_time">15 Mins</string>
    <string name="parking_order_date_head_title">DATE</string>
    <string name="parking_order_type_head_title">TYPE</string>
    <string name="parking_order_fee_head_title">FEE/BAL</string>
    <string name="parking_order_location_head_title">LOCATION</string>
    <string name="parking_no_data">No Data</string>
    <string name="parking_parking_history">Parking History</string>
    <string name="parking_payment">Payment</string>
    <string name="parking_wavpay_ewallet">Wavpay E-Wallet</string>
    <string name="parking_money_unit">RM</string>
    <string name="parking_viewing_details">Viewing Details</string>
    <string name="parking_order_paid">PAID</string>
    <string name="parking_report_an_issue">Report an issue</string>
    <string name="parking_contact_us">Contact US</string>
    <string name="parking_wavpay_parking_pay">Wavpay Parking Pay</string>
    <string name="parking_announcement">Announcement</string>
    <string name="parking_contact_tip">All of Wavpay user will entitled 0% free of charge for purchase essential good on any Wavpay merchant parking pay</string>
    <string name="parking_parking_list">Parking List</string>
    <string name="parking_all_merchants">All Merchants</string>
    <string name="parking_shopping_mall">Shopping Mall</string>
    <string name="parking_commercial">Commercial</string>
    <string name="parking_residential">Residential</string>
    <string name="parking_locations">Locations</string>
    <string name="parking_near_me">NEAR ME</string>
    <string name="parking_no_parking_found">No nearby parking locations found.</string>
    <string name="parking_refresh">Refresh</string>
    <string name="parking_councils">COUNCILS</string>
    <string name="parking_rfid_tag">RFID TAG</string>
    <string name="parking_register_now">REGISTER NOW...</string>
    <string name="parking_register_prompt">Input your RFID number to embedded into your Wavpay E-wallet for future convenience access</string>
    <string name="parking_enter">Enter</string>
    <string name="parking_rfid_tag_number">RFID Tag Number:</string>
    <string name="parking_mobile_number">Mobile Number:</string>
    <string name="parking_enter_otp">Enter OTP:</string>
    <string name="parking_submit">Submit</string>
    <string name="parking_embedded_successfully">Embedded Successfully!!!</string>
    <string name="parking_auto_activation">Auto-Reload Activation Feature</string>
    <string name="parking_rfit_prompt">Your E-Wallet balance will automatically reloaded via your added Credit/Debit Card</string>
    <string name="parking_init_prompt">Your Future Smart Cashless Parking Apps</string>
    <string name="parking_reference_number">Reference Number</string>
    <string name="parking_txn_time">Txn.Time</string>
    <string name="parking_merchant_name">Merchant Name</string>
    <string name="parking_lpr_vehicle">LPR Vehicle</string>
    <string name="parking_email_receipt">Email Receipt</string>
    <string name="parking_your_primary_vehicle">Your Primary Vehicle</string>
    <string name="parking_upload_image_prompt">Upload your license plate image for double verification</string>
    <string name="parking_image_1">Image 1</string>
    <string name="parking_image_2">Image 2</string>
    <string name="parking_image_3">Image 3</string>
    <string name="parking_maybe_later">Maybe Later</string>
</resources>