<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parking_rfid_tag"
        android:textColor="@android:color/darker_gray"
        android:textSize="30dp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@mipmap/parking_bg_rfid_card">

        <TextView
            android:id="@+id/parking_fragment_rfid_child_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kevin Wong"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/parking_fragment_rfid_child_rfid_number_tv"
            app:layout_constraintStart_toStartOf="@+id/parking_fragment_rfid_child_rfid_number_tv" />

        <TextView
            android:id="@+id/parking_fragment_rfid_child_rfid_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="@dimen/parking_vertical_margin"
            android:text="xxxxxxxxxx"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/parking_fragment_rfid_child_no_register_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/parking_vertical_margin"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/parking_vertical_margin"
            android:gravity="center"
            android:text="@string/parking_register_now"
            android:textColor="@android:color/darker_gray"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/parking_register_prompt"
            android:textColor="@android:color/darker_gray"
            android:textSize="14dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/parking_fragment_rfid_child_enter_btn"
            style="@style/ParkingThemeButtonStyle"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/parking_enter"
            android:textAllCaps="false"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/parking_fragment_rfid_child_edit_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/parking_vertical_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/parking_bg_edit"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/parking_rfid_tag_number"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/parking_fragment_rfid_child_tag_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/parking_bg_edit"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/parking_mobile_number"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/parking_fragment_rfid_child_mobile_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/parking_bg_edit"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/parking_enter_otp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/parking_fragment_rfid_child_otp_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

        </LinearLayout>

        <Button
            android:id="@+id/parking_fragment_rfid_child_submit_btn"
            style="@style/ParkingThemeButtonStyle"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/parking_submit"
            android:textAllCaps="false"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/parking_fragment_rfid_child_success_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/parking_vertical_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/parking_embedded_successfully"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <View
            style="@style/ParkingHorizontalDivideStyle"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/parking_auto_activation"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/parking_rfit_prompt"
                android:textColor="@android:color/darker_gray"
                android:textSize="13dp" />

            <Switch
                android:id="@+id/parking_fragment_rfid_child_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/parking_horizontal_margin"
                android:track="@drawable/parking_switch_track" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>