<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/parking_view_title_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/parking_horizontal_margin"
        android:text="@string/parking_viewing_details"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingStart="@dimen/parking_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingEnd="@dimen/parking_horizontal_margin"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/parking_fragment_order_info_payment_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/parking_payment"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/parking_order_paid"
            android:textColor="#22B14C"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/parking_fragment_order_info_payment_tv" />

        <TextView
            android:id="@+id/parking_fragment_order_info_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="7.00"
            android:textColor="@android:color/black"
            android:textSize="34dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:text="@string/parking_money_unit"
            android:textColor="#5F6DD3"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/parking_fragment_order_info_amount_tv"
            app:layout_constraintTop_toTopOf="@+id/parking_fragment_order_info_amount_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/parking_vertical_margin"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingStart="@dimen/parking_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingEnd="@dimen/parking_horizontal_margin"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/parking_license_plate_number"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parking_fragment_order_info_plate_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:lines="1"
                android:text="WD1234"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/parking_paid_to"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parking_fragment_order_info_paid_to_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:lines="1"
                android:text="WD1234"
                android:textColor="@android:color/black"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/parking_in_time"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parking_fragment_order_info_in_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:lines="1"
                android:text="WD1234"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/parking_date_and_time"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parking_fragment_order_info_date_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:lines="1"
                android:text="WD1234"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/parking_out_location"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parking_fragment_order_info_location_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:lines="1"
                android:text="WD1234"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/parking_transaction_id"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parking_fragment_order_info_t_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:lines="1"
                android:text="WD1234"
                android:textColor="@android:color/black"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/parking_vertical_margin"
        android:background="@android:color/white"
        android:drawableEnd="@mipmap/parking_ic_right_indicate"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/parking_horizontal_margin"
        android:paddingEnd="@dimen/parking_horizontal_margin"
        android:text="@string/parking_report_an_issue"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>
